# derenotes

./: .buildinfo  .gitignore  LICENCE.txt  README.md  bufferprotocol.md  devnotes.md  genindex.html  index.html  init.py  makeapidocs.md  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.py
.github/workflows/: sphinx.yaml  unittest.yaml
_sources/modules/: derenotes.chart.rst.txt  derenotes.derenotes.rst.txt  derenotes.file.rst.txt  derenotes.init.rst.txt  derenotes.libs.image.rst.txt  derenotes.libs.notes.rst.txt  derenotes.libs.rst.txt  derenotes.rst.txt  derenotes.seek.rst.txt
config/: config.toml
derenotes/: __main__.py  chart.kv  chart.py  derenotes.kv  derenotes.py  file.kv  file.py  frame.py  init.py  seek.kv  seek.py
derenotes/libs/image/: video.c  video.pxd  video.pyx
derenotes/libs/image/ffmpeg/: libavcodec.pxd  libavformat.pxd  libavutil.pxd  libswscale.pxd
derenotes/libs/notes/: song.py
docs/api/: requirements.txt
docs/api/source/: conf.py  index.rst
docs/api/source/modules/: derenotes.libs.notes.song.rst
docs/source/: conf.py  index.rst
docs/source/modules/: derenotes.frame.rst  derenotes.libs.image.video.rst  modules.rst
modules/: derenotes.chart.html  derenotes.derenotes.html  derenotes.file.html  derenotes.frame.html  derenotes.html  derenotes.init.html  derenotes.libs.html  derenotes.libs.image.html  derenotes.libs.image.video.html  derenotes.libs.notes.html  derenotes.libs.notes.song.html  derenotes.seek.html  modules.html
tests/: note.md  test_libimage.py  test_libnotes.py
